# akari-bot-webrender

./: .deepsource.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.json  main.py  pyproject.toml  renovate.json  requirements.txt  run_server.py
.github/workflows/: build-and-publish-docker.yml  docker-build-and-publish.yml  python-publish.yml  upload-python-package.yml
akari_bot_webrender/constants/: __init__.py
akari_bot_webrender/functions/: browser.py  logger.py  main.py  options.py
akari_bot_webrender/server/: main.py
akari_bot_webrender/templates/: element_screenshot_evaluate.js  section_screenshot_evaluate.js
constants/: __init__.py
functions/: browser.py  logger.py  main.py  options.py
server/: main.py
