[tool.poetry]
name = "re-oa-webrender"
version = "0.1.0"
description = ""
authors = ["yzhh <31803608+OasisAkari@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
pydantic = "^2.10.2"
playwright = "^1.49.0"
orjson = "^3.10.12"
playwright-stealth = {git = "https://github.com/Mattwmaster58/playwright_stealth", rev = "rc4"}
loguru = "^0.7.3"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
