[tool.poetry]
name = "re-oa-webrender"
version = "0.1.0"
description = ""
authors = ["yzhh <OasisAkari@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.3"
fastapi = "^0.115.13"
pydantic = "^2.11.7"
playwright = "^1.52.0"
orjson = "^3.10.18"
playwright-stealth = "^2.0.0"
loguru = "^0.7.3"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
