[project]
name = "akari-bot-webrender"
version = "0.5.13"
description = ""
authors = [
    {name = "OasisAkari", email = "OasisAkari@gmail.com"},
    {name = "cloudw233", email = "cloudw233@outlook.com"},
    {name = "DoroWolf", email = "dorowolf314@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "uvicorn>=0.37.0",
    "fastapi>=0.119.0,<1.0.0",
    "pydantic>=2.11.7",
    "playwright>=1.52.0",
    "orjson>=3.10.18",
    "loguru>=0.7.3",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
    "tf-playwright-stealth>=1.2.0",
    "pre-commit>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/Teahouse-Studios/akari-bot-webrender"
Issues = "https://github.com/Teahouse-Studios/akari-bot-webrender/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/akari_bot_webrender"]

[tool.hatch.build.targets.wheel]
packages = ["akari_bot_webrender"]
